# gotio

./: README.md  additional_test.go  any_dictionary.go  benchmark_test.go  clip.go  clip_test.go  color.go  composable.go  composable_test.go  composition.go  composition_impl_test.go  composition_test.go  comprehensive_coverage_test.go  coverage_boost_test.go  coverage_test.go  decode_sonic.go  effect.go  effects_test.go  encode_containers.go  encode_leaf_types.go  errors.go  errors_test.go  extended_coverage_test.go  external_reference.go  final_coverage_test.go  final_push_test.go  freeze_frame.go  gap.go  gap_test.go  generator_reference.go  go.mod  go.sum  image_sequence_reference.go  item.go  json.go  linear_time_warp.go  marker.go  marker_test.go  media_reference.go  media_reference_test.go  (+22 more)
adapters/: bridge.go  bridge.py  bridge_test.go
algorithms/: additional_test.go  benchmark_test.go  edit.go  edit_coverage_test.go  edit_fill.go  edit_insert.go  edit_overwrite.go  edit_overwrite_test.go  edit_remove.go  edit_ripple.go  edit_roll.go  edit_slice.go  edit_slide.go  edit_slip.go  edit_test.go  edit_trim.go  edit_utils.go  edit_utils_test.go  filter.go  filter_test.go  stack_algo.go  stack_algo_test.go  timeline_algo.go  timeline_algo_test.go  track_algo.go  track_algo_test.go
benchmarks/: README.md  run_comparison.sh
benchmarks/cpp-json-bench/: CMakeLists.txt  main.cpp
bundle/: bundle_test.go  otiod.go  otioz.go  types.go  utils.go
docs/: IMPLEMENTATION_PLAN.md  PERFORMANCE_COMPARISON.md  algorithms.md  api-reference.md  architecture.md  quickstart.md  time-ranges.md  timeline-structure.md
examples/: README.md
medialinker/: builtin.go  link.go  linker.go  medialinker_test.go
opentime/: benchmark_test.go  coverage_test.go  json.go  rational_time.go  rational_time_test.go  time_range.go  time_range_test.go  time_transform.go  time_transform_test.go
opentimelineio/: additional_test.go  any_dictionary.go  benchmark_test.go  clip.go  gap.go  (+54 more)
(+41 files in other folders)
